<resources>
<string name="INSTANCEALREADYSUSPENDED">The server is already suspended</string>
<string name="INSTANCEALREADYACTIVE">The server is already active</string>
<string name="INSTANCEALREADYSHUTOFF">The server is already shutoff</string>
<string name="INSTANCESHUTOFF">The server is shutoff</string>
<string name="INSTANCESUSPENDED">The server is suspended</string>
<string name="NOTREADYINSTANCE">The server is not ready yet for displaying console</string>
<string name="FLAVORTOOSMALL">The flavor is to small to run the selected image</string>
<string name="OVERQUOTAFORVM">Quota exceeded for servers</string>
    <string name="INSTANCETASKNOTNULL">Cannot operate on server with an active task</string>
    <string name="CONFIRM">Confirm</string>
    <string name="SUSPENDSERVER">Suspend server</string>
    <string name="USEv3">Use v3 Keystone API</string>
    <string name="ATTACHINFO">Attach Info</string>
    <string name="DIRECTION">Direction</string>
    <string name="INGRESS">Ingress</string>
    <string name="EGRESS">Egress</string>
    <string name="NOFIXEDIPTOASSOCIATEFIP">No fixed IP to associate the Floating IP to (check the server\'s status)</string>
    <string name="REMOVECURRENTFIP">Remove current Floating IP</string>
    <string name="FIPREMOVED">Floating IP has been removed</string>
    <string name="CONTINUE">Continue</string>
    <string name="USERS">Users</string>
    <string name="OVERVIEW">Quotas</string>
    <string name="IMAGES">Images</string>
    <string name="TOUCHIMAGEFORINFO">Touch an image for info</string>
    <string name="IMAGENAME">Image name</string>
    <string name="INSTANCES">Instances</string>
    <string name="MEMORY">Memory (MB)</string>
    <string name="CURRENTUSER">Current user</string>
    <string name="ADDNEWUSER">Add new user</string>
    <string name="ENDPOINT">Endpoint</string>
    <string name="ONLYHOSTNAME">Endpoint (hostname[:PORT])</string>
    <string name="PROJECTNAME">Project\'s name</string>
    <string name="USERNAME">Username</string>
    <string name="PASSWORD">Password</string>
    <string name="USESSL">Use SSL</string>
    <string name="ADD">Add</string>
    <string name="ADDSUCCESS">Success !\nYou can add another user or go back and select a user.</string>
    <string name="SELECTOSIMAGE">Select an OpenStack Image</string>
    <string name="NOUSERSELECTED">You haven\'t selected any user yet. Please touch on \'Users\' button</string>
    <string name="USAGEOVERVIEW">Quota</string>
    <string name="MENUABOUT">About</string>
    <string name="MENUHELP">Help</string>
    <string name="MENUUPDATE">Update</string>
    <string name="TOUCHUSERTOSELECT">Touch a user to select it</string>
    <string name="MUSTSELECTNET">You haven\'t selected any network. Cannot start an instance without a network to attach.</string>
    <string name="MUSTSETNAME">You must put a name for the instance.</string>
    <string name="FIXEDIPLIST">Comma separated Fixed IPs (optional):</string>
    <string name="NOTIMPLEMENTED">Functionality not implemented yet, work in progress&#8230; coming soon.</string>
    <string name="MENUDELETEALL">Delete all instances</string>
    <string name="DELETEDINSTSANCES">Instances successfully delete. Update window to refresh view.</string>
    <string name="SOMEDELETIONFAILED">Some instance hasn\'t been found in the server (probably was already in deleting state)&#8230;\nDeletion\'s finished, refresh the window.</string>
    <string name="RESETFIELDS">Reset fields</string>
    <string name="SELECTEDUSER">Selected user</string>
    <string name="NONE">None</string>
    <string name="MANAGENOVAINST">Manage Nova instances</string>
    <string name="MANAGEGLANCEIMG">Manage Glance images</string>
    <string name="NOCUSTOMIPWITHMOREVM">You cannot specify custom IP address with more than one instance to launch.</string>
    <string name="INCORRECTIPFORMAT">Incorrect IPv4/IPv6 address format</string>
    <string name="FLOATINGIP">Manage Floating IP</string>
    <string name="FIPNOTASSOCIATED">This floating IP is not associated to any server.</string>
    <string name="PICKASERVERTOASSOCIATEFIP">Pick a server to which associate the floating IP</string>
    <string name="ALREADYASSOCIATEDWARN">This floating IP is already associated to a server. If you continue, the association will be moved to the chosen server.</string>
    <string name="ALREADYASSOCIATED">Floating IP already associated to this server.</string>
    <string name="CANNOTRELEASEASSOCIATEDFIP">This IP is still associated to a server and cannot be released.\nTry to refresh the window pressing Menu-&gt;Update.</string>
    <string name="NOINSTANCEAVAIL">There are not any instance.</string>
    <string name="NOIMAGEAAVAIL">There aren\'t any image.</string>
    <string name="NOSECGRPSAVAIL">There aren\'t any security group.</string>
    <string name="SECGROUP">Manage Security Groups</string>
    <string name="NOTFIPAVAIL">There aren\'t any allocated floating IP.</string>
    <string name="PLEASEWAITCONNECTING">Please wait: connecting to remote server&#8230;</string>
    <string name="AREYOUSURETODELETEVM">Are you sure to delete this instance ?</string>
    <string name="AREYOUSURETODELETEVMS">Are you sure to delete all instances ?</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="CANCEL">Cancel</string>
    <string name="LAUNCHIMAGE">Launch image</string>
    <string name="IMAGELAUNCHED">Image has been launched. Go to Instances window to see it.</string>
    <string name="SPECIFYOPTIP">Specify IP (optional)</string>
    <string name="FIPDISSOCIATED">Floating IP has been dissociated from the server. Refresh the window if you still see the server name.</string>
    <string name="FIPASSOCIATED">Floating IP has been associated to the server. Refresh the window if you do not see the server name yet.</string>
    <string name="FIPONLYFROMEXTERNAL">The selected network is not of external type. You can get Floating IP only from External networks.\nSelect a different network (if any).</string>
    <string name="NONETSELECTED">You haven\'t selected any external network (or you cannot access to any one).</string>
    <string name="FIPALLOCATED">Floating IP allocated. Refresh the window if you do not see it yet.</string>
    <string name="FIPRELEASED">Floating IP released. Refresh the window if you still see it.</string>
    <string name="SHOWPWD">Show password</string>
    <string name="NOSERVERTOASSOCIATEFIP">There\'re no instance to associate this floating IP.</string>
    <string name="AREYOUSURETODELETESECGRP">Are you sure to delete this Security Group ?</string>
    <string name="INPUTSNAPNAME">Insert the snapshot\'s name</string>
    <string name="SNAPCREATED">Snapshot created. Go to \'Images\' window to see it.</string>
    <string name="INPUTSSECNAME">Insert Security Group\'s name</string>
    <string name="VOLUMES">Volumes</string>
    <string name="NETWORKS">Networks</string>
    <string name="EDITSECGROUP">Edit Rules for</string>
    <string name="ADDRULE">Add rule</string>
    <string name="TENANTNAME">Tenant\'s name</string>
    <string name="AVAILUSERS">Available users:</string>
    <string name="NOEMPTYNAME">Cannot use an empty name.</string>
    <string name="NOVOLUMEAVAIL">No volume available</string>
    <string name="PLEASECHECKCREDS">Please check your credentials&#8230;</string>
    <string name="PLEASECHECKCREDSFORIMAGE">Please check your credentials or that the image you\'re trying to delete is owned by you&#8230;</string>
    <string name="PLEASECHECKCREDSFORINSTANCE">Please check your credentials or that the instance you\'re trying to delete is owned by you&#8230;</string>
    <string name="SECGRPNAME">Name</string>
    <string name="SECGRPDESC">Description (optional)</string>
    <string name="AVAILRULES">Available inbound rules:</string>
    <string name="LAUNCH">Launch</string>
    <string name="NETWORKS2">Networks:</string>
    <string name="NUMOFINSTANCES">Number of instances:</string>
    <string name="INSTANCENAME">Instance\'s name:</string>
    <string name="FROMPORT">From port</string>
    <string name="TOPORT">A porta</string>
    <string name="NOEXTSTORAGEWRITABLE">External storage is not writable ! This App cannot work.</string>
    <string name="NOINTERNETCONNECTION">This device is NOT connected to Internet. This App cannot work.</string>
    <string name="PROTOCOL">Protocol</string>
    <string name="SERVICEUNAVAILABLE">Remote service is not responding; please check that it\'s working&#8230;</string>
    <string name="NOTFOUND">Resource or URI not found</string>
    <string name="NOTAUTHORIZED">Not authorized to access the resource or URI</string>
    <string name="RULECREATED">Rule successfully created. Refresh the window if not automatically displayed.</string>
    <string name="RULEDELETED">Rule successfully deleted. Refresh the window if rule is still displayed.</string>
    <string name="INPUTVOLNAME">Insert volume name and size</string>
    <string name="VOLSIZEMUSTBENUMERIC">Volume size must be numeric.</string>
    <string name="NOZEROVOLSIZE">Not allowed a zero sized volume.</string>
    <string name="VOLUMECREATED">Volume created successfully. Refresh the window if it is not displayed yet.</string>
    <string name="VOLNAME">Volume name</string>
    <string name="VOLSIZE">Volume size (GBytes)</string>
    <string name="CANNOTDELETEATTACHEDVOL">Cannot delete a volume attached to an instance.</string>
    <string name="VOLUMEDELETED">Volume successfully deleted. Refresh the window if it is still displayed.</string>
    <string name="AREYOUSURETODELETEVOL">Are you sure to delete the volume ?</string>
    <string name="INPUTNUMLOGLINES">Max number of lines</string>
    <string name="ALREADYATTACHED">The volume is already attached to an instance. Detach it first.</string>
    <string name="ALREADYDETACHED">The volume is not attached.</string>
    <string name="VOLUMEATTACHED">Volume successfully attached. Refresh the window.</string>
    <string name="VOLUMEDETACHED">Volume successfully detached. Refresh the window.</string>
    <string name="NOSERVERTOATTACHVOL">No server available to which attach volume.</string>
    <string name="PICKASERVERTOATTACHVOL">Select a server to which attach the volume:</string>
    <string name="CREATEVOLUME">Create new volume</string>
    <string name="VOLUMEGIGA">Total Gigabytes</string>
    <string name="VOLUMES_LAB">Volumes</string>
    <string name="UPDATE">Update</string>
    <string name="MENUDELETEALLVOL">Delete all volumes</string>
    <string name="AREYOUSURETODETACHVOL">Are you sure to detach volume ?</string>
    <string name="NOTINRANGE">is not in the subnet range</string>
    <string name="POOL">Pool: </string>
    <string name="SERVER">Server: </string>
    <string name="NONETAVAIL">No network available.</string>
    <string name="NETNAME">Network name</string>
    <string name="VOLUMENAME">Volume name</string>
    <string name="STATUS">Status</string>
    <string name="SIZE">Size</string>
    <string name="PUBLIC">Public</string>
    <string name="FORMAT">Format</string>
    <string name="MINDISK">Minimum disk</string>
	<string name="MINRAM">Minimum RAM</string>
	<string name="INUSE">In use</string>
	<string name="AVAILABLE">Available</string>
	<string name="BOOTABLE">Bootable</string>
	<string name="READONLY">Read only</string>
	<string name="ATTACHMENT">Attachment</string>
	<string name="CREATENETWORK">Create new network</string>
	<string name="INCORRECTMASKFORMAT">CIDR mask must be in the range 1&#8211;32</string>
	<string name="MyNet">myNetwork</string>
	<string name="RECREATEUSERS">The user persistency has changed... Please try to recreate users.\n\nOld users have been removed.</string>
	<string name="NETWORKCREATED">Network created succesfully. Refresh the window.</string>
    <string name="ROUTERNAME">Router\'s name</string>
    <string name="SELECTIMAGE">Select Image</string>
</resources>