<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    
	<Space
        android:layout_width="wrap_content"
        android:layout_height="5dip" />
	
    
    
    
    <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/ROUTERNAME" />
    <EditText
             android:id="@+id/routernameET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text=""
             android:inputType="textNoSuggestions"
             android:ems="10" />
	
	<LinearLayout
  		android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   	 	android:gravity="center_horizontal"
   	 	android:orientation="horizontal" >
    
   		 <Button
	      	  android:id="@+id/myButtonCreateRouter"
      		  android:layout_width="wrap_content"
      		  android:layout_height="wrap_content"
      	  	  android:text="@string/CONFIRM" />

	         <Button
                 android:id="@+id/myButtonCreateRouterCancel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/CANCEL" />

	</LinearLayout>
</LinearLayout>
