<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

	<ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
      <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >
      <LinearLayout
                android:id="@+id/optionLayer"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="4dp"
                android:orientation="vertical" >
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/INSTANCENAME"
		android:textSize="14sp"
		android:textStyle="bold"
		android:ems="10" />

		  <EditText
                android:id="@+id/vmnameET"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
				android:textSize="14sp"
				android:inputType="textNoSuggestions"
                android:ems="10" >
                <requestFocus />
        </EditText>

		  <TextView
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:text="@string/SELECTIMAGE"
			  android:textSize="14sp"
			  android:textStyle="bold"
			  android:ems="10"
			  android:id="@+id/textView14" />

		  <Spinner
			  android:id="@+id/spinnerImages"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content" />

		  <TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="Flavor:"
		android:textSize="14sp"
		android:textStyle="bold"
		android:ems="10" />
	<Spinner
	    android:id="@+id/spinnerFlavor"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" />
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/NUMOFINSTANCES"
		android:textStyle="bold"
		android:textSize="14sp"
		android:ems="10" />	    
        <EditText
                    android:id="@+id/countET"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="1"
		    android:textSize="14sp"
                    android:inputType="number"
                    android:ems="10" />

	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="KeyPair:"
		android:textSize="14sp"
		android:textStyle="bold"
		android:ems="10" />
	<Spinner
	    android:id="@+id/keypairSP"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" />
        
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/NETWORKS2"
		android:textStyle="bold"
		android:textSize="14sp"
		android:ems="10" />

	<LinearLayout
	    android:id="@+id/networksLayer"
	    android:orientation="vertical"
   	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content">

	</LinearLayout>

	<LinearLayout
	    android:id="@+id/secgroupsLayer"
	    android:orientation="vertical"
   	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content">

 	  <TextView
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:text="Security groups:"
	      android:textSize="14sp"
	      android:textStyle="bold"
	      android:ems="10" />       
	</LinearLayout>
	
        </LinearLayout>

        <LinearLayout
   	  android:layout_width="fill_parent"
    	  android:layout_height="wrap_content"
   	  android:layout_gravity="center_horizontal"
  	  android:gravity="center_horizontal" >
          
	  <Button
   	    android:id="@+id/launchButton"
   	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
   	    android:layout_gravity="center_horizontal"
   	    android:fadingEdge="horizontal"
  	    android:shadowDx="3"
     	    android:shadowDy="3"
     	    android:shadowRadius="3"
     	    android:text="@string/LAUNCH"
	    android:textSize="14sp"
	    android:onClick="launch" />

			<Button
				android:id="@+id/cancelButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:fadingEdge="horizontal"
				android:shadowDx="3"
				android:shadowDy="3"
				android:shadowRadius="3"
				android:text="@string/CANCEL"
				android:textSize="14sp"
				android:onClick="launch" />

		</LinearLayout>
      </LinearLayout>
    </ScrollView>
</LinearLayout>
