<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/objectsL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="3dp"
            android:orientation="vertical">
            
            <View
        	  android:layout_width="match_parent"
        	  android:layout_height="3sp" />
              
          	<TextView
              android:id="@+id/selected_user"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingLeft="10dp"
              android:text="@string/SELECTEDUSER" />
          	
      	  <View
        	  android:layout_width="match_parent"
        	  android:layout_height="3sp" />
      	  
      	  <View   
         	 android:layout_width="fill_parent"
        	 android:layout_height="3dp"
        	 android:background="#FF909090" />  
            <View
          android:layout_width="match_parent"
          android:layout_height="3sp"
        />
            <LinearLayout
     	 android:layout_width="fill_parent"
     	 android:layout_height="wrap_content"
     	 android:gravity="center_vertical"
     	 android:background="#f2f2f2"
     	 android:orientation="horizontal" >
            <ImageButton
             android:id="@+id/addrule"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@android:drawable/ic_menu_add"
             android:background="#f2f2f2"
                android:layout_weight="1"
             android:onClick="addRule" />
        <ImageButton
                android:id="@+id/updateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_refresh"
                android:text="@string/UPDATE"
            	android:background="#f2f2f2"
                android:layout_weight="1"
                android:onClick="update" />
        </LinearLayout>
        
		     
		  
		  <View
             android:layout_width="wrap_content"
             android:layout_height="5dip" />
            
     	  <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:text="@string/AVAILRULES" />
     	  <View
             android:layout_width="wrap_content"
             android:layout_height="3dip" />
     	  <LinearLayout
     	      android:layout_width="match_parent"
     	      android:id="@+id/layoutRuleList"
     	      android:layout_height="wrap_content"
     	      android:orientation="vertical" >

     	  </LinearLayout>
     	  
         </LinearLayout>

     </ScrollView>

</LinearLayout>
